# secas-ssa

./: .gitignore  Developing.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  trivy-scan.yml
analysis/: constants.py
analysis/lib/: colors.py  graph.py  io.py  raster.py  speedups.pyx
analysis/lib/geometry/: __init__.py  aggregate.py  clean.py  conversion.py
analysis/lib/stats/: __init__.py  analysis_units.py  inundation_frequency.py  nlcd.py  population.py  prescreen.py  sarp.py  se_blueprint_indicators.py  slr.py  urban.py
analysis/prep/: prep_inundation_frequency.py  prep_sarp_huc12_stats.py  prepare_nlcd.py  prepare_slr.py
api/: README.md  api.py  progress.py  settings.py  validation.py  worker.py
api/report/: inundation_frequency.py  metadata.py  nlcd.py  sarp.py  se_blueprint_indicators.py  slr.py  style.py  summary.py  urban.py  xlsx.py
api/routes/: health.py  report.py  results.py  status.py  upload.py
api/tasks/: inspect.py  report.py
constants/: datasets.json
data/inputs/: README.md
data/inputs/indicators/: README.md
data/inputs/se_blueprint_indicators/: README.md
data/inputs/threats/slr/: README.md
data/inputs/threats/urban/: README.md
source_data/inundation_frequency/: README.md
source_data/nlcd/: README.md
source_data/sarp/: README.md
tests/: test_report.py  test_report_api.py
ui/: .eslintrc  eslint.config.js  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html  theme.js
ui/src/components/data/: Datasets.js  index.js
ui/src/components/image/: Credits.jsx  HeaderImage.jsx  index.jsx
ui/src/components/job/: JobContainer.jsx  JobError.jsx  api.js  index.jsx
ui/src/components/layout/: ErrorMessage.jsx  Footer.jsx  Header.jsx  HeaderButtons.jsx  Layout.jsx  SEO.jsx  UnsupportedBrowser.jsx  fonts.js
ui/src/components/modal/: BoundModal.jsx  ContactModal.jsx  Modal.jsx  ReportProblemModal.jsx  index.jsx
ui/src/components/report/: Category.jsx  CategoryHeader.jsx  Dataset.jsx  Download.jsx  DownloadModal.jsx  DropZone.jsx  ReportWorkflow.jsx  SelectAttribute.jsx  SelectDatasets.jsx  Steps.jsx  Upload.jsx  UploadContainer.jsx  UploadError.jsx  UploadForm.jsx  api.js  index.jsx
ui/src/components/tooltip/: InfoTooltip.jsx
ui/src/lib/: env.ts
ui/src/lib/components/dialog/: ContactDialog.svelte  ReportProblemDialog.svelte  index.ts
ui/src/lib/components/layout/: Analytics.svelte  Footer.svelte  Header.svelte  index.ts
ui/src/lib/components/report/: Download.svelte  Job.svelte  SelectAttribute.svelte  SelectDatasets.svelte  Upload.svelte  UploadForm.svelte  api.ts  index.ts  types.ts
ui/src/lib/components/tooltip/: InfoTooltip.svelte
ui/src/lib/components/ui/badge/: badge.svelte
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/tooltip/: tooltip-content.svelte
ui/src/lib/config/: constants.ts
ui/src/lib/util/: data.ts  dom.ts  format.ts  func.ts  log.ts
ui/src/pages/: 404.jsx  custom_report.jsx  datasets.jsx  index.jsx  methods.jsx  report.jsx
ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/datasets/: +page.svelte
ui/src/routes/report/: +page.svelte
ui/src/util/: data.js  dom.js  format.js  hooks.js  log.js
ui/static/: robots.txt
