[tool.poetry]
name = "secas-ssa"
version = "0.2.0"
description = ""
authors = ["Brendan Ward <bcward@astutespruce.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
geopandas = "^1.0.1"
affine = "^2.4.0"
aiofiles = "^24.1.0"
fastapi = "^0.111.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
rasterio = "^1.3.10"
sentry-sdk = "^2.12.0"
uvicorn = "^0.30.3"
pyarrow = "^17.0.0"
arq = "^0.26.0"
openpyxl = "^3.1.5"
shapely = "^2.0.5"
pyogrio = "^0.9.0"
hiredis = "^2.2.2"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["http2"], version = "^0.27.0"}
watchfiles = "^0.22.0"
ruff = "^0.5.5"
watchgod = "^0.8.2"
progress = "^1.6"
cython = "^3.0.10"

[tool.ruff]
exclude = ['.scratch']