[project]
name = "secas-ssa"
version = "0.3.0"
description = "SECAS Southeast Species Status Landscape Assessment Tool"
readme = "README.md"
authors = [{ name = "Brendan C. Ward", email = "bcward@astutespruce.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "affine",
    "aiofiles",
    "arq",
    "fastapi",
    "geopandas",
    "gunicorn",
    "Jinja2",
    "numpy",
    "openpyxl",
    "pandas",
    "progress",
    "pyarrow",
    "pymgl",
    "pyogrio",
    "python-calamine",
    "python-dotenv",
    "python-multipart",
    "rasterio",
    "sentry-sdk",
    "shapely",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "cython",
    "httpx[http2]",
    "ruff",
    "setuptools",
    "watchgod",
    "watchfiles",
]

[tool.setuptools.packages.find]
include = ["analysis", "api"]

[tool.ruff]
exclude = ['.scratch']
